--- a/busquedaOrdenamiento/busquedaOrdenamiento.vcxproj.filters
+++ b/busquedaOrdenamiento/busquedaOrdenamiento.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Sort.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="search.h">
@@ -37,6 +40,9 @@
     </ClInclude>
     <ClInclude Include="sort.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
