--- a/busquedaOrdenamiento/busquedaOrdenamiento.vcxproj
+++ b/busquedaOrdenamiento/busquedaOrdenamiento.vcxproj
@@ -18,6 +18,21 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Archivos_H\controlador.h" />
+    <ClInclude Include="Archivos_H\search.h" />
+    <ClInclude Include="Archivos_H\sort.h" />
+    <ClInclude Include="Archivos_H\Utils.h" />
+    <ClInclude Include="Archivos_H\view.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Archivos_CPP\busquedaOrdenamiento.cpp" />
+    <ClCompile Include="Archivos_CPP\controlador.cpp" />
+    <ClCompile Include="Archivos_CPP\search.cpp" />
+    <ClCompile Include="Archivos_CPP\Sort.cpp" />
+    <ClCompile Include="Archivos_CPP\utils.cpp" />
+    <ClCompile Include="Archivos_CPP\view.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -102,6 +117,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(ProjectDir)Archivos_H</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -122,19 +138,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="Sort.cpp" />
-    <ClCompile Include="busquedaOrdenamiento.cpp" />
-    <ClCompile Include="search.cpp" />
-    <ClCompile Include="utils.cpp" />
-    <ClCompile Include="view.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="search.h" />
-    <ClInclude Include="sort.h" />
-    <ClInclude Include="Utils.h" />
-    <ClInclude Include="view.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
